--- a/estilo/style.css
+++ b/estilo/style.css
@@ -1,14 +1,58 @@
-@charset "UTF-8";
+ @charset "UTF-8";
 
 /* 
     paleta de cores
     verde: #49a09d
-    lilás: #5f2c52
+    lilás: #5f2c82
 */
+
+:root{
+    --cor01:#49a09d;
+    --cor02:#5f2c82;
+}
 
 *{
     margin: 0px;
     padding: 0px;
     box-sizing: border-box;
+    font-family: system-ui, -apple-system, BlinkMacSystemFont, 'Segoe UI', Roboto, Oxygen, Ubuntu, Cantarell, 'Open Sans', 'Helvetica Neue', sans-serif;
 }
 
+body, html{
+    background-color: var(--cor02);
+    height: 100vh;
+    width: 100vw;
+}
+
+main{
+    height: 100vh;
+    width: 100vw;
+    position: relative;
+}
+
+section#login{
+    position: absolute;
+    top: 50%;
+    left: 50%;
+    transform: translate(-50%, -50%);
+    overflow: hidden;
+
+
+    background-color: white;
+    width: 250px;
+    height: 500px;
+    border-radius: 20px;
+    box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.450);
+}
+
+section#login > div#imagem{
+    display: block;
+    background: url(../imagens/pexels-aleksandar-pasaric-1415734.jpg) no-repeat;
+    height: 200px;
+    background-size: cover;
+}
+
+section#login > div#formulario{
+    display: block;
+    padding: 10px;
+}
