--- a/estilo/media-queries.css
+++ b/estilo/media-queries.css
@@ -20,6 +20,14 @@
         float: right;
         width: 70%;
     }
+
+    div#formulario > h1{
+        font-size: 1.8em;
+    }
+
+    div#formulario > p{
+        font-size: 1em;
+    }
 }
 
 @media screen and (min-width: 992px){
@@ -33,13 +41,21 @@
     }
 
     section#login > div#imagem{
-        float: left;
+        float: right;
         width: 50%;
         height: 100%;
     }
 
     section#login > div#formulario{
-        float: right;
+        float: left;
         width: 50%;
+    }
+
+    div#formulario > h1{
+        font-size: 2em;
+    }
+
+    div#formulario > p{
+        font-size: 1.3em;
     }
 }
