--- a/estilo/style.css
+++ b/estilo/style.css
@@ -40,7 +40,7 @@ section#login{
 
     background-color: white;
     width: 250px;
-    height: 500px;
+    height: 515px;
     border-radius: 20px;
     box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.450);
 
@@ -58,4 +58,61 @@ section#login > div#imagem{
 section#login > div#formulario{
     display: block;
     padding: 10px;
+}
+
+div#formulario{
+    margin-bottom: 10px;
+    text-align: center;
+}
+
+div#formulario > p{
+    font-size: 0.8em;
+}
+
+form > div.campo{
+    background-color: var(--cor02);
+    width: 100%;
+    display: block;
+    height: 40px;
+    border-radius: 5px;
+    margin: 5px 0px;
+}
+
+form > input[type=submit] {
+    display: block;
+    font-size: 1em;
+    width: 100%;
+    height: 40px;
+    background-color: var(--cor01);
+    color: white;
+    border: none;
+    border-radius: 5px;
+}
+
+form > input[type=submit]:hover{
+    background-color: #326d6b;
+    cursor: pointer;
+}
+
+form > a.botao{
+    display: block;
+    width: 100%;
+    height: 40px;
+    background-color: white;
+    border: 1px solid #49a09d;
+    text-decoration: none;
+    margin-top: 10px;
+    color: #142b2a;
+    border-radius: 5px;
+    text-align: center;
+    font-size: 1em;
+    padding-top: 7px;
+}
+
+form > a.botao:hover{
+    background-color: #56bdb9;
+}
+
+form > a.botao > span{
+    font-size: 0.8em;
 }
