finalização tela de login

--- a/estilo/style.css
+++ b/estilo/style.css
@@ -1,4 +1,4 @@
- @charset "UTF-8";
+@charset "UTF-8";
 
 /* 
     paleta de cores
@@ -34,7 +34,6 @@ section#login{
     position: absolute;
     top: 50%;
     left: 50%;
-    transform: translate(-50%, -50%);
     overflow: hidden;
 
 
@@ -44,6 +43,7 @@ section#login{
     border-radius: 20px;
     box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.450);
 
+    transform: translate(-50%, -50%);
     transition: width 0,3s, height 0.3s;
     transition-timing-function: ease;
 }
@@ -71,11 +71,35 @@ div#formulario > p{
 
 form > div.campo{
     background-color: var(--cor02);
+    border: 2px solid var(--cor02);
     width: 100%;
     display: block;
     height: 40px;
-    border-radius: 5px;
+    border-radius: 8px;
     margin: 5px 0px;
+}
+
+div.campo > label > span{
+    color: white;
+    font-size: 2em;
+    width: 40px;
+    padding: 5px;
+}
+
+div.campo > input{
+    background-color: var(--cor01);
+    border: none;
+    font-size: 1em;
+    width:calc(100% - 45px);
+    height: 100%;
+    border-radius: 8px;
+    padding: 4px;
+    transform: translateY(-12px);
+}
+
+div.campo > input:focus-within{
+    background-color: white;
+    outline: none;
 }
 
 form > input[type=submit] {
