--- a/estilo/media-queries.css
+++ b/estilo/media-queries.css
@@ -8,6 +8,7 @@
 
     section#login{
         width: 80vw;
+        height: 280px;
     }
 
     section#login > div#imagem{
@@ -38,6 +39,7 @@
 
     section#login{
         width: 950px;
+        height: 400px;
     }
 
     section#login > div#imagem{
@@ -57,5 +59,8 @@
 
     div#formulario > p{
         font-size: 1.3em;
+        margin: 20px 0px;
     }
+
+
 }
